[tool.poetry]
name = "content-loader"
version = "0.1.0"
description = ""
authors = ["Sotnikov Arkadiy <cotnikoarkady@gmail.com>"]
readme = "README.md"
packages = [{include = "content_loader"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

