[tool.poetry]
name = "content-loader"
version = "0.1.0"
description = ""
authors = ["Sotnikov Arkadiy <cotnikoarkady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

